src/styles/global.scss
@use "styles/abstracts" as *;

@font-face {
    font-family: "raleway";
    src: url("/fonts/raleway.ttf");
}

:global(:root) {
    --border-width: 2px;
    --border-radius: 0.5rem;

    @media (prefers-color-scheme: dark) {
        // Text
        --theme-text: hsl(39, 48%, 71%);
        --theme-text-dark: hsl(38, 20%, 37%);
        --theme-text-light: hsl(38, 23%, 55%);

        // Elements
        --theme-accent: hsl(39, 68%, 60%);
        --theme-primary: hsl(0, 0%, 4%);
        --theme-error: hsl(0, 57%, 51%);
    }

    @media (prefers-color-scheme: light) {
        // Text
        --theme-text: hsl(0, 0%, 4%);
        --theme-text-dark: hsl(0, 0%, 0%);
        --theme-text-light: hsl(0, 0%, 10%);

        // Elements
        --theme-accent: hsl(244, 96%, 44%);
        --theme-primary: hsl(32, 41%, 75%);
        --theme-error: hsl(0, 53%, 27%);
    }
}

:global(.svgStroke) {
    stroke: currentcolor;
    stroke-miterlimit: 10;
    fill: none;
    stroke-linecap: round;
}

:global(.svgFill) {
    fill: currentcolor;
}

:global(*) {
    font-feature-settings:
        "pnum" on,
        "lnum" on;
    box-sizing: border-box;
    padding: 0;
    margin: 0;

    font-family: "raleway", Helvetica, sans-serif;
}

:global(html, body) {
    max-width: 100vw;
    min-height: 100%;
    color-scheme: dark light;

    color: var(--theme-text);
}

:global(body) {
    min-height: 100%;
}

:global(html) {
    background-color: var(--theme-primary);
}

:global(a) {
    color: inherit;
    text-decoration: none;
}

:global(h1) {
    font-weight: 200;
    font-size: clamp(3rem, 5vw, 6rem);
    text-transform: capitalize;
}

:global(::-webkit-scrollbar) {
    width: 5px;
}

:global(::-webkit-scrollbar-thumb) {
    background: #555;
    border-radius: 10px;
}

:global(::-webkit-scrollbar-track) {
    background: #222;
    border-radius: 10px;
}

